--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ django-like-button==0.0.7
 django-likes==1.11
 django-registration==2.4.1
 django-secretballot==1.0.0
+gunicorn==19.7.1
 isort==4.3.0
 lazy-object-proxy==1.3.1
 mccabe==0.6.1
